syntax = "proto3";
package sec_srv_svc;

import "srv_message_type.proto";

message SrvMsgAttach {
	int32 msg_size = 1;
	MessageType message_type = 2;
	string app_name = 3;
	string user_name = 4;
	int32 client_version = 5;
	int32 client_revision = 6;
}

message SrvMsgAttachResponse {
	uint32 msg_size = 1;
	int32 ver_and_rev = 2;
	uint32 feature_flag = 3;
}

